--- a/engadgetstyle.css
+++ b/engadgetstyle.css
@@ -1,6 +1,6 @@
 @media (min-width:1281px) {
     #drmobile {
-        display:none
+        display:none;
     }
 }
 
@@ -8,7 +8,11 @@
     display: none;
 }
 
+#container {
+    display: flex;
+    flex-direction: column;
 
+ }
 #menu {
     list-style: none;
     display: flex;
@@ -26,11 +30,7 @@
     font-weight: bolder;
     
 }
-#container {
-    display: flex;
-    flex-direction: column;
 
- }
  #promo {
      display: flex;
      flex-direction: column;
@@ -48,12 +48,6 @@
     justify-content: space-between;
     background-color: lightgray;
 }
-h4 {
-    color: #0073b9;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
-    font-size: 12pt;
-}
 .boxtitle {
     width: 300px; 
     height: 300; 
@@ -65,7 +59,12 @@ h4 {
     justify-content: space-between;
     padding: 30px;
 }
-
+h4 {
+    color: #0073b9;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    font-size: 12pt;
+}
 
 @media (min-width: 320px) and (max-width: 480px) {
 
@@ -80,8 +79,8 @@ h4 {
     }
 
     #drmobile {
-        width: 50%;
+        width: 100%;
+        display: flex;
         
     }
-
 }
